infrastruttura N-Tier Architecture

--- a/Sediin.Core.WebUi/Views/Shared/_Layout.cshtml
+++ b/Sediin.Core.WebUi/Views/Shared/_Layout.cshtml
@@ -3,10 +3,9 @@
 
 @inject SignInManager<IdentityUser> SignInManager
 @inject UserManager<IdentityUser> UserManager
-@* @inject ApplicationDbContext context *@
+@* @inject SediinCoreDataAccessDbContext context *@
 
 @using Microsoft.AspNetCore.Identity
-@using Sediin.Core.WebUi.Areas.Identity.Data;
 
 <style>
     /* Please see documentation at https://learn.microsoft.com/aspnet/core/client-side/bundling-and-minification
