--- a/Sediin.Core.WebUi/Views/Shared/_LoginPartial.cshtml
+++ b/Sediin.Core.WebUi/Views/Shared/_LoginPartial.cshtml
@@ -1,5 +1,4 @@
-﻿@using Sediin.Core.WebUi.Areas.Identity.Data;
-@using Sediin.Core.WebUi.Data;
+﻿@using Sediin.Core.WebUi.Data;
 
 @using Microsoft.AspNetCore.Identity
 @inject SignInManager<IdentityUser> SignInManager
