--- a/Sediin.Core.WebUi/Views/Shared/_LoginPartial.cshtml
+++ b/Sediin.Core.WebUi/Views/Shared/_LoginPartial.cshtml
@@ -1,7 +1,4 @@
-﻿@using Sediin.Core.WebUi.Data;
-
-@using Microsoft.AspNetCore.Identity
-@inject SignInManager<IdentityUser> SignInManager
+﻿@inject SignInManager<IdentityUser> SignInManager
 @inject UserManager<IdentityUser> UserManager
 
 
