--- a/Sediin.Core.WebUi/Views/_ViewImports.cshtml
+++ b/Sediin.Core.WebUi/Views/_ViewImports.cshtml
@@ -1,3 +1,9 @@
 ﻿@using Sediin.Core.WebUi
 @using Sediin.Core.WebUi.Models
+
+@using Sediin.Core.Identity
+@using Sediin.Core.WebUi.Data;
+@using Microsoft.AspNetCore.Identity
+
+
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
