--- a/Sediin.Core.WebUi/Views/_ViewImports.cshtml
+++ b/Sediin.Core.WebUi/Views/_ViewImports.cshtml
@@ -1,9 +1,11 @@
 ﻿@using Sediin.Core.WebUi
 @using Sediin.Core.WebUi.Models
 
+
 @using Sediin.Core.Identity
 @using Sediin.Core.WebUi.Data;
 @using Microsoft.AspNetCore.Identity
 
+@using Sediin.Core.Helpers.Html
 
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
