--- a/Sediin.Core.WebUi/Views/Authentication/Login.cshtml
+++ b/Sediin.Core.WebUi/Views/Authentication/Login.cshtml
@@ -9,14 +9,21 @@
 
 <div id="loginResult"></div>
 
-<form asp-controller="Authentication"
+@using (Html.BeginAjaxForm("Login", "Authentication",
+updateTargetId: "loginResult",
+onSuccess: "onLoginSuccess",
+onFailure: "onLoginFailed"))
+{
+
+
+    @* <form asp-controller="Authentication"
       asp-action="Login"
       method="post"
       data-ajax="true"
       data-ajax-mode="replace"
       data-ajax-update="#loginResult"
       data-ajax-success="onLoginSuccess"
-      data-ajax-failure="onLoginFailed">
+      data-ajax-failure="onLoginFailed"> *@
 
     <div class="form-floating mb-3">
         <input asp-for="Username" class="form-control" autocomplete="username" aria-required="true" placeholder="username" />
@@ -38,30 +45,33 @@
     </div>
 
     <button type="submit" class="btn btn-primary w-100">Login</button>
-</form>
+    @* </form>
+ *@
+
+}
 
 <script src="~/lib/jquery/dist/jquery.min.js"></script>
 <script src="~/lib/jquery-unobtrusive/jquery.unobtrusive-ajax.min.js"></script>
 
-    <!-- Validazione -->
-@*     <partial name="_ValidationScriptsPartial" />
- *@
-    <script>
-        function onLoginSuccess(response) {
-            if (response.success) {
-                $('#loginResult').html('<div class="alert alert-success">Accesso effettuato con successo!</div>');
-                // Redirect se specificato
-                if (response.redirectUrl) {
-                    setTimeout(function () {
-                        window.location.href = response.redirectUrl;
-                    }, 1000);
-                }
-            } else {
-                $('#loginResult').html('<div class="alert alert-danger">' + response.message + '</div>');
-            }
-        }
+<!-- Validazione -->
+<partial name="_ValidationScriptsPartial" />
 
-        function onLoginFailed(xhr) {
-            $('#loginResult').html('<div class="alert alert-danger">Errore durante l’invio della richiesta.</div>');
+<script>
+    function onLoginSuccess(response) {
+        if (response.success) {
+            $('#loginResult').html('<div class="alert alert-success">Accesso effettuato con successo!</div>');
+            // Redirect se specificato
+            if (response.redirectUrl) {
+                setTimeout(function () {
+                    window.location.href = response.redirectUrl;
+                }, 1000);
+            }
+        } else {
+            $('#loginResult').html('<div class="alert alert-danger">' + response.message + '</div>');
         }
-    </script>
+    }
+
+    function onLoginFailed(xhr) {
+        $('#loginResult').html('<div class="alert alert-danger">Errore durante l’invio della richiesta.</div>');
+    }
+</script>
