--- a/Sediin.Core.WebUi/Views/Shared/_Layout.cshtml
+++ b/Sediin.Core.WebUi/Views/Shared/_Layout.cshtml
@@ -137,6 +137,7 @@
     </footer>
 
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
+    <script src="~/lib/jquery-unobtrusive/jquery.unobtrusive-ajax.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
     <script src="~/lib/font-awesome/js/all.min.js"></script>
