--- a/Sediin.Core.WebUi/Views/Shared/_Layout.cshtml
+++ b/Sediin.Core.WebUi/Views/Shared/_Layout.cshtml
@@ -142,6 +142,8 @@
     <script src="~/js/site.js" asp-append-version="true"></script>
     <script src="~/lib/font-awesome/js/all.min.js"></script>
     <script src="~/lib/font-awesome/js/all.js"></script>
+    <script src="~/js/sweetalert2.js"></script>
+    <script src="~/js/utils.js"></script>
 
     @await RenderSectionAsync("Scripts", required: false)
 </body>
