--- a/Sediin.Core.WebUi/Views/Shared/_Layout.cshtml
+++ b/Sediin.Core.WebUi/Views/Shared/_Layout.cshtml
@@ -1,204 +1,93 @@
 ﻿@using Microsoft.Extensions.Configuration
 @inject IConfiguration Configuration
 
-@inject SignInManager<IdentityUser> SignInManager
-@inject UserManager<IdentityUser> UserManager
-@* @inject SediinCoreDataAccessDbContext context *@
-
-@using Microsoft.AspNetCore.Identity
-
-<style>
-    /* Please see documentation at https://learn.microsoft.com/aspnet/core/client-side/bundling-and-minification
-                                        for details on configuring this project to bundle and minify static web assets. */
-
-    a.navbar-brand {
-        white-space: normal;
-        text-align: center;
-        word-break: break-all;
-        font-size: large;
-    }
-
-    a {
-        color: #0077cc;
-    }
-
-    .btn-primary {
-        color: #fff;
-        background-color: #1b6ec2;
-        border-color: #1861ac;
-    }
-
-    .nav-pills .nav-link.active, .nav-pills .show > .nav-link {
-        color: #fff;
-        background-color: #1b6ec2;
-        border-color: #1861ac;
-    }
-
-    .border-top {
-        border-top: 1px solid #e5e5e5;
-    }
-
-    .border-bottom {
-        border-bottom: 1px solid #e5e5e5;
-    }
-
-    .box-shadow {
-        box-shadow: 0 .25rem .75rem rgba(0, 0, 0, .05);
-    }
-
-    button.accept-policy {
-        font-size: 1rem;
-        line-height: inherit;
-    }
-
-    .footer {
-        position: absolute;
-        bottom: 0;
-        width: 100%;
-        white-space: nowrap;
-        line-height: 60px;
-    }
-
-    hr {
-        opacity: 1;
-    }
-</style>
 
 <!DOCTYPE html>
 <html lang="it">
-@{
-    int logged = @SignInManager.IsSignedIn(User) ? 1 : 0;
-}
 
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>
-        @ViewData["Title"] - @{ Configuration.GetSection("ApplicationSettings")["ApplicationName"]?.ToString(); }
+       @{ Configuration.GetSection("ApplicationSettings")["ApplicationName"]?.ToString(); }
     </title>
+
     <script type="importmap"></script>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
+    <link href="~/lib/bootstrap/dist/bootstrap.custom.css" rel="stylesheet" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
-    <link rel="stylesheet" href="~/css/backend.css" asp-append-version="true" />
-    <link rel="stylesheet" href="~/Sediin.Core.WebUi.styles.css" asp-append-version="true" />
+    <link href="~/css/backend.css" rel="stylesheet" />
     <link href="~/lib/font-awesome/css/all.min.css" rel="stylesheet" />
     <link href="~/lib/font-awesome/css/all.css" rel="stylesheet" />
+    <link href="~/css/validation.css" rel="stylesheet" />
+    <link href="~/css/modale.css" rel="stylesheet" />
 </head>
 
 <body>
-    <header>
-        <nav class="navbar navbar-expand-lg bg-primary" data-bs-theme="dark" style="height: 80px;">
-            <div class="container">
-                <a class="navbar-brand" asp-area="" asp-page="/Index">@Configuration.GetSection("ApplicationSettings")["ApplicationName"]?.ToString()</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
-                    <ul class="navbar-nav flex-grow-1">
-                        @if (SignInManager.IsSignedIn(User))
-                        {
-                            <li class="nav-item">
-                                <a class="nav-link" href="javascript:void(0)" id="sidebarCollapse" style="color:white">
-                                    <i class="fas fa-sliders-h marginMenuIcon"></i>
-                                    <span id="sidebarCollapseText">Chiudi menu</span>
-                                </a>
-                            </li>
-                        }
-                        <li class="nav-item">
-                            <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-                        </li>
-                    </ul>
-                    <partial name="_LoginPartial" />
-                </div>
+    <header class="blurEffect">
+        <nav class="navbar navbar-expand-lg navbar-custom shadow">
+
+            <button class="navbar-toggler" type="button" 
+            data-bs-toggle="collapse"
+                    data-bs-target="#navbarSediinWebUi" aria-controls="navbarSediinWebUi"
+                    aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+
+
+            <div class="collapse navbar-collapse" id="navbarSediinWebUi">
+
+                <ul class="navbar-nav mr-auto">
+
+
+                    <li>
+                        <a class="nav-link" href="#" target="_blank">
+                            <i class="fas fa-home marginMenuIcon"></i>
+                            Sito @{ Configuration.GetSection("ApplicationSettings")["ApplicationName"]?.ToString(); }
+                        </a>
+                    </li>
+
+                </ul>
+
             </div>
         </nav>
+
     </header>
 
-    <div class="wrapper blurEffect">
-        @if (SignInManager.IsSignedIn(User))
-        {
-            <div id="contentMenu"></div>
-        }
-        <div id="contentrenderbody" class="container ml-1 mt-4 mr-1 pt-2 p-4">
-            <main role="main" class="pb-3" style="margin-bottom:60px;">
-                @RenderBody()
-            </main>
-        </div>
-    </div>
 
-    <footer class="border-top footer text-muted">
-        <div class="container">
-            &copy; 2025 - @Configuration.GetSection("ApplicationSettings")["ApplicationName"]?.ToString() - <a asp-area="" asp-page="/Privacy">Privacy</a>
+    <main class="d-flex align-items-center blurEffect">
+        <div class="container mt-3 mb-3">
+            @RenderBody()
+        </div>
+    </main>
+
+
+    <footer class="container-fluid blurEffect">
+        <div class="row">
+            <div class="col-md-4" style="text-align: left;">@{
+                        Configuration.GetSection("ApplicationSettings")["ApplicationName"]?.ToString();
+                        }
+            </div>
+            <div class="col-md-4" style="text-align: center;">&nbsp;</div>
+            <div class="col-md-4" style="text-align: right;">&copy; Sediin Spa</div>
         </div>
     </footer>
 
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/jquery-unobtrusive/jquery.unobtrusive-ajax.min.js"></script>
+    <script src="~/lib/jquery-validation/dist/jquery.validate.min.js"></script>
+    <script src="~/lib/jquery-validation-unobtrusive/dist/jquery.validate.unobtrusive.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
     <script src="~/lib/font-awesome/js/all.min.js"></script>
     <script src="~/lib/font-awesome/js/all.js"></script>
     <script src="~/js/sweetalert2.js"></script>
     <script src="~/js/utils.js"></script>
+    <script src="~/js/inputs.js"></script>
+    <script src="~/js/customvalidator.js"></script>
+    <script src="~/js/modale.js"></script>
 
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
 
-<script>
-    $().ready(function () {
-        if (@logged == 1)
-        {
-            $.get('@Url.Action("Index", "Menu")', function(content){
-                $("#contentMenu").html(content); });
-        }
-
-        $('.scroll-top-wrapper').click(scrollContainerTop);
-    });
-
-    $(document).on('scroll', function () {
-        try {
-            if ($(window).scrollTop() > 100) {
-                $('.scroll-top-wrapper').addClass('show');
-            } else {
-                $('.scroll-top-wrapper').removeClass('show');
-            }
-        } catch (e) {
-
-        }
-    });
-
-    function scrollContainerToPosition(position) {
-        try {
-            $('html, body').animate({
-                scrollTop: position
-            }, 800);
-        } catch (e) {
-
-        }
-    }
-
-    function scrollContainerTop() {
-        scrollContainerToPosition(0);
-    }
-
-    function scrollToElementId(e) {
-        scrollContainerToPosition($("#" + e).offset().top - 100);
-    }
-
-    // $(function () {
-
-    //     $('#modalDetail').modal("hide").on('shown.bs.modal', function () {
-
-    //         $('#modalDetail').animate({ scrollTop: 0 }, 'slow');
-
-    //     }).on('hidden.bs.modal', function () {
-    //     });
-
-
-    // });
-</script>
