--- a/Sediin.Core.WebUi/Views/Authentication/ForgotPassword.cshtml
+++ b/Sediin.Core.WebUi/Views/Authentication/ForgotPassword.cshtml
@@ -1,9 +1,9 @@
 ﻿@model Sediin.Core.WebUi.Models.ForgotPasswordViewModel
 
 @using (Html.BeginAjaxForm("ForgotPassword", "Authentication",
-                onBegin: "alertWaid()",
-                onSuccess: "hideModal(); alertSuccess(data)",
-                onFailure: "handleError"))
+               onBegin: "alertWaid()",
+               onSuccess: "hideModal(); alertSuccess(data)",
+               onFailure: "handleError"))
 {
     <div class="form-horizontal row mt-4">
         <div class="form-group col-8">
@@ -30,3 +30,5 @@
 
     </div>
 }
+<partial name="_ValidationScriptsPartial" />
+
