--- a/Sediin.Core.WebUi/Areas/Backend/Views/Shared/Components/Menu/SideMenu.cshtml
+++ b/Sediin.Core.WebUi/Areas/Backend/Views/Shared/Components/Menu/SideMenu.cshtml
@@ -1,5 +1,5 @@
 ﻿@inject IConfiguration Configuration
-@model IEnumerable<Sediin.Core.WebUi.Areas.Backend.Models.MenuViewModel>
+@model IEnumerable<Sediin.Core.DataAccess.Entities.Menu>
 
 @functions
     {
