--- a/Sediin.Core.WebUi/Views/Authentication/Login.cshtml
+++ b/Sediin.Core.WebUi/Views/Authentication/Login.cshtml
@@ -13,9 +13,9 @@
         <hr />
 
         @using (Html.BeginAjaxForm("Login", "Authentication",
-                onBegin: "alertWaid()",
-                onSuccess: "onLoginSuccess",
-                onFailure: "handleError"))
+        onBegin: "alertWaid()",
+        onSuccess: "onLoginSuccess",
+        onFailure: "handleError"))
         {
             <div class="form-horizontal mt-4">
                 <div class="form-group">
@@ -50,16 +50,18 @@
             <hr />
 
             <div class="form-group row mt-4">
-                <div class="col-md-8">
+                <div class="col-md-12">
                     <i class="fas fa-key mr-1"></i>
-                    <a class="link-black" data-ajax="true" data-ajax-begin="alertWaid()" data-ajax-failure="handleError" data-ajax-success="showModal_NoFooter('Recupero Password', data); alertClose()" href="/Authentication/ForgotPassword">Hai dimenticato la password?</a>
+                    <a class="link-black" data-ajax="true"
+                       data-ajax-begin="alertWaid()"
+                       data-ajax-failure="handleError"
+                       data-ajax-success="showModal_NoFooter('Recupero Password', data); alertClose()" href="/Authentication/ForgotPassword">Hai dimenticato la password?</a>
                 </div>
-            </div>
 
-            <div class="form-group row mt-4">
-                <div class="col-md-8">
+                <div class="col-md-12 mt-1">
                     <i class="fa fa-user-lock mr-1"></i>
-                    <a class="link-black" data-ajax="true" data-ajax-begin="alertWaid()" data-ajax-failure="handleError"
+                    <a class="link-black" data-ajax="true"
+                       data-ajax-begin="alertWaid()" data-ajax-failure="handleError"
                        data-ajax-success="showModal_NoFooter('Crea una nuova utenza', data); alertClose()"
                        href="/Authentication/Register">Crea una nuova utenza</a>
                 </div>
