tag helpers razor per ricerche

--- a/Sediin.Core.WebUi/Areas/Backend/Views/Shared/Components/Menu/NavMenu.cshtml
+++ b/Sediin.Core.WebUi/Areas/Backend/Views/Shared/Components/Menu/NavMenu.cshtml
@@ -124,7 +124,7 @@
                         <i class="fas fa-key marginMenuIcon"></i>
                         Modifica Password
                     </a>
-                    <a class="nav-link" href="@Url.Action("LogOff", "Account", new { area = "" })">
+                    <a class="nav-link" href="@Url.Action("LogOff", "Authentication", new { area = "" })">
                         <i class="fas fa-sign-out-alt marginMenuIcon"></i>
                         LogOff
 
