taghelper asp form

--- a/Sediin.Core.WebUi/Views/Authentication/ForgotPassword.cshtml
+++ b/Sediin.Core.WebUi/Views/Authentication/ForgotPassword.cshtml
@@ -1,10 +1,10 @@
 ﻿@model Sediin.Core.WebUi.Models.ForgotPasswordViewModel
 
-@using (Html.BeginAjaxForm("ForgotPassword", "Authentication",
-               onBegin: "alertWaid()",
-               onSuccess: "hideModal(); alertSuccess(data)",
-               onFailure: "handleError"))
-{
+<ajax-form asp-action="ForgotPassword" asp-controller="Authentication"
+           on-begin="alertWaid()"
+           on-success="hideModal(); alertSuccess(data)"
+           on-failure="handleError">
+    
     <div class="form-horizontal row mt-4">
         <div class="form-group col-8">
             @Html.LabelFor(model => model.Email, htmlAttributes: new { @class = "control-label" })
@@ -29,6 +29,8 @@
         <button type="button" class="btn btn-danger" data-dismiss="modal" onclick="hideModal()">Chiudi la finestra</button>
 
     </div>
-}
+
+</ajax-form>
+
 <partial name="_ValidationScriptsPartial" />
 
