--- a/Sediin.Core.WebUi/Views/Authentication/Login.cshtml
+++ b/Sediin.Core.WebUi/Views/Authentication/Login.cshtml
@@ -11,11 +11,12 @@
         <h4 class="card-title"><i class="fa fa-user-lock mr-2"></i>Accesso area riservata</h4>
         <hr />
 
-        @using (Html.BeginAjaxForm("Login", "Authentication",
-        onBegin: "alertWaid()",
-        onSuccess: "onLoginSuccess",
-        onFailure: "handleError"))
-        {
+        <ajax-form asp-action="Login" 
+                   asp-controller="Authentication"
+                   on-begin="alertWaid()"
+                   on-success="onLoginSuccess"
+                   on-failure="handleError">
+
             <div class="form-horizontal mt-4">
                 <div class="form-group">
                     <div class="col-md-12">
@@ -61,7 +62,7 @@
                        href="/Authentication/Register">Crea una nuova utenza</a>
                 </div>
             </div>
-        }
+        </ajax-form>
 
     </div>
 </div>
