--- a/Sediin.Core.WebUi/Views/Authentication/ResetPassword.cshtml
+++ b/Sediin.Core.WebUi/Views/Authentication/ResetPassword.cshtml
@@ -10,11 +10,11 @@
         <div class="mt-3">
             <h4 class="card-title"><i class="fa fa-passport mr-2"></i>Reimposta la password dell'area riservata</h4>
             <hr />
-            @using (Html.BeginAjaxForm("ResetPassword", "Authentication",
-                        onBegin: "alertWaid()",
-                        onSuccess: "onSuccessResetPassword(data)",
-                        onFailure: "handleError"))
-            {
+           <ajax-form asp-action="ResetPassword" asp-controller="Authentication"
+           on-begin="alertWaid()"
+           on-success="onSuccessResetPassword(data)"
+           on-failure="handleError">
+
                 @Html.HiddenFor(model => model.Code)
 
                 <div class="form-horizontal mt-4">
@@ -70,7 +70,7 @@
 
                 </div>
 
-            }
+            </ajax-form>
         </div>
     </div>
 </div>
