--- a/Sediin.Core.WebUi/Views/Authentication/Register.cshtml
+++ b/Sediin.Core.WebUi/Views/Authentication/Register.cshtml
@@ -1,10 +1,10 @@
 ﻿@model Sediin.Core.WebUi.Models.RegisterViewModel
 
-@using (Html.BeginAjaxForm("Register", "Authentication",
-                onBegin: "alertWaid()",
-                onSuccess: "onRegisterSuccess",
-                onFailure: "handleError"))
-{
+<ajax-form asp-action="Register" asp-controller="Authentication"
+           on-begin="alertWaid()"
+           on-success="onRegisterSuccess"
+           on-failure="handleError">
+
     <div class="form-horizontal row mt-4">
         <div class="col-md-6">
             <div class="form-group">
@@ -68,7 +68,7 @@
 
     </div>
 
-}
+</ajax-form>
 
 
 <partial name="_ValidationScriptsPartial" />
