--- a/Sediin.Core.WebUi/Areas/Administrator/Views/Utenti/Ricerca.cshtml
+++ b/Sediin.Core.WebUi/Areas/Administrator/Views/Utenti/Ricerca.cshtml
@@ -11,9 +11,9 @@
  *@
 
  <ricerca-modulo 
-    header-text="Ricerca Pratiche"
-    ricerca-action="/Pratiche/RisultatiRicerca"
-    execute-ricerca-on-ready="false"
+    header-text="Ricerca Utenti"
+    ricerca-action="/Administrator/Utenti/Ricerca"
+    execute-ricerca-on-ready="true"
     reset-button="false"
     partial-html="@await Html.PartialAsync("RicercaModulo", null)"
  >
