--- a/Sediin.Core.WebUi/Areas/Administrator/Views/Utenti/RicercaList.cshtml
+++ b/Sediin.Core.WebUi/Areas/Administrator/Views/Utenti/RicercaList.cshtml
@@ -1,8 +1,58 @@
-﻿
+﻿@model Sediin.Core.WebUi.Areas.Administrator.Models.UtentiVM
+
+
+@if (Model.TotalRecords == 0)
+{
+
+}
+else
+{
+    <div class="table-responsive">
+        <table class="table table-striped table-bordered table-hover">
+            <thead>
+                <tr class="text-center table-custom-blue">
+                    <th>Descrizione</th>
+                    <th>Codice Comune</th>
+                    <th>Email</th>
+
+                </tr>
+            </thead>
+            <tbody>
+                @foreach (var item in Model.Result)
+                {
+                    <tr>
+                        <td>@item.Nome</td>
+                        <td>@item.Cognome</td>
+                        <td>@item.Email</td>
+                    </tr>
+                }
+            </tbody>
+        </table>
+    </div>
+
+}
 
 
 
-<mvc-paging asp-action="Ricerca"
+
+
+
+
+
+
+
+<paging-ajax page-size="@Model.PageSize"
+             page-index="@Model.CurrentPage"
+             total-rows="@Model.TotalRecords"
+             action="@Url.Action("Ricerca", "Utenti")"
+             action-export="@Url.Action("RicercaExcel", "Utenti")"
+             update-target-id="resultRicerca"
+             http-method="Post">
+</paging-ajax>
+
+
+
+@* <mvc-paging asp-action="Ricerca"
             page-size="@Model.PageSize"
             page-index="@Model.CurrentPage"
             total-rows="@Model.TotalRecords"
@@ -11,3 +61,4 @@
             ajax-method="post"
             on-failure="handleError">
 </mvc-paging>
+ *@
