--- a/Sediin.Core.WebUi/Areas/Administrator/Views/Utenti/RicercaModulo.cshtml
+++ b/Sediin.Core.WebUi/Areas/Administrator/Views/Utenti/RicercaModulo.cshtml
@@ -1,1 +1,29 @@
-﻿RICERCA MODULO
+﻿@model Sediin.Core.Identity.Models.UtentiRicercaVM
+
+<div class="form-horizontal">
+
+    <div class="row">
+
+        <div class="col-md-12">
+            <div class="form-group">
+                @Html.LabelFor(model => model.UtentiRicercaVM_Username, htmlAttributes: new { @class = "control-label" })
+
+                @Html.TextBoxFor(model => model.UtentiRicercaVM_Username, new { @class = "form-control" })
+                @Html.ValidationMessageFor(model => model.UtentiRicercaVM_Username, "", new { @class = "text-danger" })
+
+            </div>
+        </div>
+
+    </div>
+
+    <hr />
+    <div class="form-group text-center">
+        <button type="submit" class="btn btn-primary">Avvia ricerca</button>
+    </div>
+</div>
+
+
+
+
+
+
