--- a/Sediin.Core.WebUi/Areas/Administrator/Views/Utenti/RicercaModulo.cshtml
+++ b/Sediin.Core.WebUi/Areas/Administrator/Views/Utenti/RicercaModulo.cshtml
@@ -16,14 +16,14 @@
 
     </div>
 
-    <hr />
-    <div class="form-group text-center">
-        <button type="submit" class="btn btn-primary">Avvia ricerca</button>
-    </div>
+
+
+
 </div>
 
-
-
+<script>
+    // setTimeout(function(){updateListRicerca(true)},100);
+</script>
 
 
 
