--- a/Sediin.Core.WebUi/Areas/Administrator/Views/Utenti/RicercaList.cshtml
+++ b/Sediin.Core.WebUi/Areas/Administrator/Views/Utenti/RicercaList.cshtml
@@ -10,7 +10,7 @@ else
     <div class="table-responsive">
         <table class="table table-striped table-bordered table-hover">
             <thead>
-                <tr class="text-center table-custom-blue">
+                <tr class="text-center table-info">
                     <th>Descrizione</th>
                     <th>Codice Comune</th>
                     <th>Email</th>
