--- a/Sediin.Core.WebUi/Areas/Administrator/Views/Utenti/RicercaModulo.cshtml
+++ b/Sediin.Core.WebUi/Areas/Administrator/Views/Utenti/RicercaModulo.cshtml
@@ -21,9 +21,7 @@
 
 </div>
 
-<script>
-    // setTimeout(function(){updateListRicerca(true)},100);
-</script>
+<partial name="_ValidationScriptsPartial" />
 
 
 
