--- a/Sediin.Core.WebUi/Views/Authentication/Login.cshtml
+++ b/Sediin.Core.WebUi/Views/Authentication/Login.cshtml
@@ -1,74 +1,66 @@
 ﻿@model Sediin.Core.WebUi.Models.Authentication
 
+
 <link href="~/css/hideshowpassword.css" rel="stylesheet" />
+<link href="~/css/login.css" rel="stylesheet" />
 
-<div class="row border border-1" style="min-height:460px;">
-    <div class="col-md-6" style="margin:auto; text-align:center;">
-        <img src="~/images/logo.png" />
-    </div>
+<div class="login-container">
+    <div class="login-box">
+        <div class="text-center mb-4">
+            <img src="~/images/logo.png" alt="Logo" style="max-width: 180px;" />
+        </div>
 
-    <div class="col-md-6 mt-3 p-3">
-        <h4 class="card-title"><i class="fa fa-user-lock mr-2"></i>Accesso area riservata</h4>
-        <hr />
+        <h4 class="card-title text-center mb-3">
+            <i class="fa fa-user-lock mr-2"></i>Accesso area riservata
+        </h4>
 
-        <ajax-form asp-action="Login" 
+        <ajax-form asp-action="Login"
                    asp-controller="Authentication"
                    on-begin="alertWaid()"
                    on-success="onLoginSuccess"
                    on-failure="handleError">
 
-            <div class="form-horizontal mt-4">
-                <div class="form-group">
-                    <div class="col-md-12">
-                        @Html.LabelFor(model => model.Username, htmlAttributes: new { @class = "control-label" })
-                        @Html.TextBoxFor(model => model.Username, new { @class = "form-control col-md-12", placeholder = "Codice utente", autocomplete = "off", type = "search" })
-                        @Html.ValidationMessageFor(model => model.Username, "")
-                    </div>
-                </div>
+            <div class="form-group">
+                @Html.LabelFor(model => model.Username, htmlAttributes: new { @class = "control-label" })
+                @Html.TextBoxFor(model => model.Username, new { @class = "form-control", placeholder = "Codice utente", autocomplete = "off", type = "search" })
+                @Html.ValidationMessageFor(model => model.Username, "", new { @class = "text-danger" })
             </div>
 
             <div class="form-group">
-                <div class="col-md-12">
-                    @Html.LabelFor(model => model.Password, htmlAttributes: new { @class = "control-label" })
-                    @Html.EditorFor(model => model.Password, new { htmlAttributes = new { @class = "form-control col-md-12", placeholder = "Password" } })
-                    @Html.ValidationMessageFor(model => model.Password, "")
-                </div>
+                @Html.LabelFor(model => model.Password, htmlAttributes: new { @class = "control-label" })
+                @Html.EditorFor(model => model.Password, new { htmlAttributes = new { @class = "form-control", placeholder = "Password" } })
+                @Html.ValidationMessageFor(model => model.Password, "", new { @class = "text-danger" })
             </div>
 
-            <hr />
-
-            <div class="form-group mt-4">
-                <div class="col-md-12 text-left">
-                    <button type="submit" class="btn btn-info form-control">Esegui accesso</button>
-                </div>
+            <div class="text-end">
+                <button type="submit" class="btn btn-info btn-sm mt-3">Esegui accesso</button>
             </div>
 
-            <hr />
+            <div class="text-center mt-4">
+                <a class="d-block" data-ajax="true"
+                   data-ajax-begin="alertWaid()"
+                   data-ajax-failure="handleError"
+                   data-ajax-success="showModal_NoFooter('Recupero Password', data); alertClose()"
+                   href="/Authentication/ForgotPassword">
+                    <i class="fas fa-key mr-1"></i> Hai dimenticato la password?
+                </a>
 
-            <div class="form-group row mt-4">
-                <div class="col-md-12">
-                    <i class="fas fa-key mr-1"></i>
-                    <a class="link-black" data-ajax="true"
-                       data-ajax-begin="alertWaid()"
-                       data-ajax-failure="handleError"
-                       data-ajax-success="showModal_NoFooter('Recupero Password', data); alertClose()" href="/Authentication/ForgotPassword">Hai dimenticato la password?</a>
-                </div>
-
-                <div class="col-md-12 mt-1">
-                    <i class="fa fa-user-lock mr-1"></i>
-                    <a class="link-black" data-ajax="true"
-                       data-ajax-begin="alertWaid()" data-ajax-failure="handleError"
-                       data-ajax-success="showModal_NoFooter('Crea una nuova utenza', data); alertClose()"
-                       href="/Authentication/Register">Crea una nuova utenza</a>
-                </div>
+                <a class="d-block mt-2" data-ajax="true"
+                   data-ajax-begin="alertWaid()"
+                   data-ajax-failure="handleError"
+                   data-ajax-success="showModal_NoFooter('Crea una nuova utenza', data); alertClose()"
+                   href="/Authentication/Register">
+                    <i class="fa fa-user-plus mr-1"></i> Crea una nuova utenza
+                </a>
             </div>
+
         </ajax-form>
-
     </div>
 </div>
 
-@section Scripts {
 
+
+@section Scripts {
     <script src="~/js/hideshowpassword.js"></script>
 
     <script>
@@ -80,21 +72,17 @@
 
         function onLoginSuccess(data) {
             if (data.success) {
-
                 alertSuccessNoCloseButton(data.message);
-
                 setTimeout(function () {
                     window.location.href = "/Backend/Home";
                 }, 1000);
-
-            } else {
+            }
+            else {
                 //vai a authenticazione due fattori
 
                // $('#loginResult').html('<div class="alert alert-danger">' + response.message + '</div>');
             }
-        }
 
+        }
     </script>
 }
-
-
